--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     	<meta charset="UTF-8">
         <title>主站-幻影网页</title>
         <link href="./index.css" rel="stylesheet" type="text/css" />
+	<link rel="shortcut icon" href="./icon.ico" type="image/x-icon">
         <style>
         	body{
         		background-image:url("./bg.png");
