--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         		连接为Github储存库连接
         	</p>
         	<div class='center'>
+			<a href="https://github.com/BenParallel/BenParallel.github.io" class="yl">幻影主站</a>
         		<a href="https://github.com/BenParallel/Polandball-ColorFactory" class="yl">波兰球：颜料工厂</a>
         		<a href="https://github.com/BenParallel/country-game-alpha1.6.2" class="yl">辉煌国家</a>
         	</div>
@@ -56,7 +57,7 @@
         
        	<div id='footnote'>
        		<p class="spha">
-       			Huanying Website, based on <a herf="https://github.com/BenParallel/BenParallel.github.io">Github Pages</a>, update on 2023/04/02 (alpha 0.1.3).
+       			Huanying Website, based on Github Pages, update on 2023/04/02 (alpha 0.1.3).
        		</p>
        	</div>
     </body>
