--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         	幻影's WEB
         </div>
         
+	<div class="block">
+        	<h2 class="header">
+        		server
+        	</h2>
+        	<p class="pha">
+	        	tcp://17.tcp.cpolar.top:14067
+       		</p>
+        </div>
+	 
         <div id="info" class="block">
         	<h2 class="header">
         		主页介绍
