--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
         <div id="title">
         	幻影's WEB
         </div>
-	 
+
+	<div id="info" class="block">
+        	<h2 class="header">
+        		广告
+        	</h2>
+        	<p class="pha">
+	        	<a herf="http://jsweb.nat300.top/">天云论坛</a>
+	        	<br/>
+	        	这是个友链，一个朋友拿discuz做的，我免费给他做个广告。
+	        	<br/>
+	        	广告缘由：没人，论坛里人太少。
+       		</p>
+        </div>
+	    
         <div id="info" class="block">
         	<h2 class="header">
         		主页介绍
