--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         		广告
         	</h2>
         	<p class="pha">
-	        	<a herf="http://jsweb.nat300.top/">天云论坛</a>
+	        	<a herf="http://jsweb.nat300.top/"  class="yl">天云论坛</a>，网址： http://jsweb.nat300.top/
 	        	<br/>
 	        	这是个友链，一个朋友拿discuz做的，我免费给他做个广告。
 	        	<br/>
